# microsetta-private-api

./: .flake8  .gitattributes  .gitignore  .travis.yml  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  babel.cfg  celery_worker.py  mpa_cli.py  pyproject.toml  repo_test_scratch.py  set_github_secrets.py  setup.cfg  setup.py  tzbroken.py
.github/workflows/: python-package-conda.yml
LEGACY/: README.txt  build_db.py  config_manager.py  env_management.py  sql_connection.py
LEGACY/locale_data/: __init__.py  american_gut.py  british_gut.py  dump_locale_dicts  english_gut.py
api/: implementation.py  microsetta_private_api.yaml  server.py
api/tests/: test_implementation.py
ci/: conda_requirements.txt  pip_requirements.txt
db/: ag.html  ag_unpatched.dbs  initialize.sql  populate_test.sql
db/patches/: 0000.sql  0001.sql  0003.sql  0004.sql  0005.sql  0006.sql  0008.sql  (+24 more)
doc/: babel.md  consent.md  dump-survey.py  format_language_patches.py  surveys.md
microsetta_private_api/: __init__.py  _version.py  authrocket.pubkey  celery_tests.py  celery_utils.py  celery_worker.py  config_manager.py  conftest.py  cronjob.pubkey  exceptions.py  localization.py  qiita.py  qiita_client_manager.py  server.py  server_config.json  tasks.py
model/: account.py  sample.py  source.py  survey_template.py  survey_template_group.py  survey_template_question.py
repo/: account_repo.py  base_repo.py  kit_repo.py  sample_repo.py  source_repo.py  survey_answers_repo.py  survey_template_repo.py
templates/: new_participant.jinja2  sitebase.jinja2
util/: util.py  vue_adapter.py
(+363 files in other folders)
