[build-system]
requires = ["setuptools >= 64", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "microsetta-private-api"
dynamic = ["version"]
description = "A RESTful API to support The Microsetta Initiative"
license = "BSD-3-Clause"
authors = [
    {name = "Daniel McDonald", email = "danielmcdonald@ucsd.edu"},
]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/biocore/microsetta-private-api"

[project.scripts]
mpa-cli = "mpa_cli:cli"

[tool.setuptools]
py-modules = ["mpa_cli"]

[tool.setuptools.packages.find]
include = ["microsetta_private_api*"]

[tool.setuptools.package-data]
microsetta_private_api = [
    "translations/*/*/*.mo",
    "translations/*/*/*.po",
    "babel.cfg",
    "db/*.*",
    "db/patches/*.sql",
    "templates/*",
    "templates/email/*",
    "api/microsetta_private_api.yaml",
    "authrocket.pubkey",
    "cronjob.pubkey",
    "server_config.json",
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
